module/core/former/tests/inc/former_tests/compiletime/field_attr_bad.stderr
error: cannot find attribute `defaultx` in this scope
 --> tests/inc/former_tests/compiletime/field_attr_bad.rs:6:6
  |
6 |   #[ defaultx( 31 ) ]
  |      ^^^^^^^^
